--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
-  <title>Course Planner</title>
   <meta charset='utf-8' />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <title>Course Planner</title>
 </head>
 <body>
   <h1 id='title'>Course Planner</h1>
