Add link to Github repo in footer.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
 
   <div id='root'></div>
 
+  <footer>
+    <div>
+      <p>
+        Source code hosted on <a href="http://github.com/theyer/CoursePlanner">Github</a>.
+      </p>
+    </div>
+  </footer>
+
   <script src='dist/bundle.js'></script>
 </body>
 </html>
