--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,11 @@
 <html lang="en">
 <head>
   <meta charset='utf-8' />
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
   <title>Course Planner</title>
 </head>
 <body>
-  <h1 id='title'>Course Planner</h1>
-
   <div id='root'></div>
 
   <footer>
