--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,16 @@
 <head>
   <meta charset='utf-8' />
   <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width">
-  <link rel="icon" href="dist/favicon.ico" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+  <!-- favicon -->
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#7908b8">
+  <meta name="msapplication-TileColor" content="#2d89ef">
+  <meta name="theme-color" content="#ffffff">
+
   <title>Course Planner</title>
 </head>
 <body>
